Fix mobile heading sizes and alignment

--- a/_sass/cutie/_base.scss
+++ b/_sass/cutie/_base.scss
@@ -238,19 +238,6 @@ icon {
   }
 
   h1, h2, h3, h4, h5 {
-    text-align: center;
-  }
-
-  h1 {
-    font-size: 2.35rem;
-  }
-
-  h2 {
-    font-size: 2.15rem;
-  }
-
-  h3 {
-    font-size: 1.5rem;
   }
 
   .lead, p.lead {
